--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#experience">03. Experience</a></li>
             <li><a href="#work">04. Work</a></li>
             <li><a href="#contact">05. Contact</a></li>
-            <li><a class="resume-btn" href="resume.pdf" target="_blank">Resume</a></li>
+            <li><a class="resume-btn" href="Resume.pdf" target="_blank">Resume</a></li>
         </ul>
     </nav>
 
@@ -24,34 +24,39 @@
         <p class="greeting">Hi, my name is</p>
         <h1>Sarah S V.</h1>
         <h2>I build and design things for the web.</h2>
-        <p class="description">I'm a front-end developer and designer passionate about crafting modern, user-friendly websites and innovative digital products.</p>
+        <p class="description">I'm a detail-oriented Data Analyst and a creative UI/UX Designer with a passion for turning data into user-friendly solutions. </p>
     </header>
 
     <section id="about">
         <h2>About Me</h2>
-        <p class="about-text">As a front-end developer and UI/UX designer, I love creating engaging and responsive user interfaces. My passion lies in transforming ideas into delightful digital experiences that blend functionality with creativity.</p>
+        <p class="about-text">As a Data Analyst skilled in Data Visualization, User Research and Front-end Design, I thrive at the intersection of data and design to deliver impactful digital experiences.</p>
     </section>
 
     <section id="certifications">
         <h2>Certifications</h2>
         <div class="cert-grid">
             <div class="cert-card">
-                <h3>Web Design Fundamentals</h3>
-                <p>Completed from XYZ Platform</p>
+                <h3>Business Analytics and Data Mining using R programming</h3>
+                <p>NPTEL</p>
             </div>
             <div class="cert-card">
-                <h3>Frontend Development Bootcamp</h3>
-                <p>Completed from ABC Institute</p>
+                <h3>Data Analysis with Python and Data Visualization</h3>
+                <p>FreeCodeCamp</p>
             </div>
             <div class="cert-card">
-                <h3>UI/UX Design Essentials</h3>
-                <p>Certified by DEF Academy</p>
+                <h3>Data Analytics and Data Visualization Job Simulation</h3>
+                <p>Tata Forage groups</p>
             </div>
         </div>
     </section>
 
     <section id="experience">
-        <!-- Experience content here -->
+        <h2>Experience</h2>
+        <div class="cert-grid">
+            <div class="cert-card">
+                <h3>AI Azure Intern at Edunet Foundation associated with AICTE, Microsoft (May 2025- June 2025)</h3>
+                <p>Worked on real-world applications using Microsoft Azure AI services, including Computer Vision, NLP and Machine Learning. </p>
+            </div>
     </section>
 
     <section id="work">
